static/assets/sass/base/_base.scss
/* ... */
.pricing-body li:last-child {
  border-bottom: none;
}

.single-pricing-table.details .pricing-body {
  border-radius: 8px;
  margin-top: 265px;
  margin-right: 10px;
  padding-bottom: 70px;
  background-color: $white-color;
  padding-top: 5px;
}
.single-pricing-table.details .pricing-body ul li:first-child {
  padding: 5px;
}
.single-pricing-table.free,
.single-pricing-table.silver,
.single-pricing-table.plutinum {
  margin-top: 40px;
}

.single-pricing-table.free {
  margin-right: 10px;
}

.single-pricing-table.gold .pricing-body {
  border: none;
}
.single-pricing-table.silver .pricing-body {
  border-right: 1px solid transparent;
}
.single-pricing-table.plutinum .pricing-body {
  border-left: 1px solid transparent;
}
.single-pricing-table.free .pricing-body {
  border-radius: 0 0 0 8px;
}

.single-pricing-table.gold .pricing-body {
  border-radius: 0 0 8px 0px;
}

.single-pricing-table.free .pricing-top:before {
  border-right-color: #00803e;
}

.single-pricing-table.gold .pricing-top:before {
  border-right-color: #ca7f04;
}

.single-pricing-table.plutinum .pricing-top:before {
  border-right-color: #b20b32;
}
.pricing-description ul li {
  color: #74818d;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 400;
  margin-bottom: 10px;
}
.pricing-description ul li:last-child {
  margin-bottom: 0;
}
/* Payment Method section style */
.single-payment-method {
  display: inline-block;
  margin-left: 30px;
}

.single-payment-method:first-child {
  margin-left: 0;
}

.payment-method-innner-text h2 {
  color: $heading-color;
  margin-bottom: 20px;
}

.payment-method-innner-text p {
  margin: 0;
}

.payment-method-area {
  position: relative;
  background-image: url(../images/shape/shape-1.png);
  background-repeat: no-repeat;
  background-size: cover;
  z-index: 1;
  margin-top: 120px;
}

.payment-method-area:after {
  background-image: url(../images/shape/shape-2.png);
  content: "";
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  position: absolute;
  background-position: 0 0;
  background-repeat: no-repeat;
  background-size: cover;
  z-index: -1;
}

/* Faq Area style */

.accordion-item {
  background-color: $white-color;
  margin-bottom: 20px;
  border-radius: 4px;
  border: 1px solid #e3e3e3;
}

.accordion-item.active {
  transition: background-color 0.2s ease-in 0s;
}

.accordion-item.active {
  border: 1px solid $primary-color;
}

.accordion-item.active .accordion-header {
  color: #242a31;
  transition: background-color 0.2s ease-in 0s, color 0.2s ease-in 0.2s;
}

.accordion-item.active .accordion-header h2:before,
.accordion-item.active .accordion-header h2:after {
  background-color: black;
  transition: background-color 0.2s ease-in 0.2s, transform 0.2s ease 0.1s;
}

.accordion-item.active .accordion-header h2:before {
  display: none;
}

.accordion-item.active .accordion-header h2:after {
  transform: rotate(90deg);
}

.accordion-item.active .accordion-body {
  max-height: 900px;
  padding: 0 15px 15px;
  transition: max-height 0.3s ease-in 0s, padding 0.2s ease-in 0s;
}

.accordion-item.active .accordion-body p {
  opacity: 1;
  transition: opacity 0.2s ease-in 0.2s;
}

.accordion-header {
  padding: 10px 15px;
  cursor: pointer;
  transition: background-color 0.2s ease-out 0.3s, color 0.2s ease-out 0s;
}

.accordion-header h2 {
  position: relative;
  font-size: 16px;
  font-weight: 500;
  color: $heading-color;
  margin: 0;
  user-select: none;
  line-height: 26px;
}

.accordion-item.active .accordion-header h2 {
  color: $primary-color;
}

.accordion-header h2:before,
.accordion-header h2:after {
  content: "";
  position: absolute;
  background-color: #333;
  transition: background-color 0.2s ease-in 0s, transform 0.2s ease 0s;
}

.accordion-header h2:before {
  width: 10px;
  height: 2px;
  right: 0;
  top: calc(50% - 1px);
}

.accordion-header h2:after {
  width: 2px;
  height: 10px;
  right: 4px;
  top: calc(50% - 5px);
  transform: none;
}

.accordion-body {
  max-height: 0;
  padding: 0 15px;
  overflow: hidden;
  transition: max-height 0.2s ease-out 0s, padding 0.1s ease-out 0.2s;
}

/*==============================================================
    Documentation page style
==============================================================*/

.documentation-page {
  box-shadow: 0 0 60px rgba(0, 0, 0, 0.12);
}
.documentation-navbar .main-menu a {
  padding: 10px 30px;
}
.documentation-menu {
  background: $white-color;
  height: 100%;
}
body.fixed-nav .documentation-menu {
  position: fixed;
  width: 100%;
  height: auto;
  z-index: 90;
  top: 58px;
}

.documentation-area {
  margin-top: 35px;
  margin-bottom: 100px;
}
.navbar-centered {
  margin: 0 auto;
}

.info-title p {
  color: $paragraph-color;
  padding: 0 20px;
}

.full-info {
  overflow: hidden;
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    margin-top: 40px;
    font-weight: 700;
    color: $heading-color;
    margin-bottom: 10px;
    &:first-child {
      margin-top: 0;
    }
  }
  h1 {
    font-size: 32px;
    border-bottom: 1px solid #ebebeb;
    padding-bottom: 10px;
    margin-bottom: 20px;
  }
  h2 {
    font-size: 24px;
  }
  h3 {
    font-size: 18px;
  }
  h4 {
    font-size: 16px;
  }
  h5 {
    font-size: 15px;
  }
  h6 {
    font-size: 13px;
  }
}
.full-info h2 span.share-icon {
  color: #6b6b6b;
  font-size: 18px;
  margin-left: 10px;
  opacity: 0;
  visibility: hidden;
  transition: 0.3s ease-in-out;
}

.full-info h2:hover span.share-icon {
  opacity: 1;
  visibility: visible;
}

blockquote {
  border-left: 4px solid $primary-color;
  padding-left: 15px;
}

.full-info ul li,
.full-info ol li,
.full-info ol li p {
  color: $link-color;
  display: block;
  padding-bottom: 8px;
  line-height: 1.8;
}
.full-info ul li:last-child,
.full-info ol li:last-child,
.full-info ol p:last-child {
  margin-bottom: 0;
  padding-bottom: 0;
}
.full-info ul li,
.full-info ol li {
  text-indent: -30px;
}
.full-info ul li p,
.full-info ol li p {
  text-indent: 0;
  margin-top: -30px;
}
/* ... */

